[tool.poetry]
name = "audio-stream-chunkify"
version = "0.1.0"
description = ""
authors = ["socar-serena <serena@socar.kr>"]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.24.2"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
